force-app/main/default/objects/Coupon__c/fields/Coupon_Link__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Link__c</fullName>
    <label>Coupon Link</label>
    <type>Url</type>
</CustomField>