force-app/main/default/objects/Coupon__c/fields/Diaco_DateSentNotificationTrigger__c.field-meta.xml
<CustomField>
    <fullName>Diaco_DateSentNotificationTrigger__c</fullName>
    <description>Field responsible to determinate if its need to do a sent a notification mail</description>
    <inlineHelpText>Field responsible to determinate if its need to do a sent a notification mail</inlineHelpText>
    <label>Date Sent Notification Trigger</label>
    <type>Date</type>
</CustomField>