force-app/main/default/objects/Coupon__c/fields/Diaco_EmailNotification1__c.field-meta.xml
<CustomField>
    <fullName>Diaco_EmailNotification1__c</fullName>
    <description>Store the email notification 1</description>
    <label>Email Notification 1</label>
    <type>Email</type>
</CustomField>