force-app/main/default/objects/Coupon__c/fields/Diaco_EmailNotification2__c.field-meta.xml
<CustomField>
    <fullName>Diaco_EmailNotification2__c</fullName>
    <description>Store the email notification 2</description>
    <label>Email Notification 2</label>
    <type>Email</type>
</CustomField>