force-app/main/default/objects/Coupon__c/fields/Diaco_EmailNotification3__c.field-meta.xml
<CustomField>
    <fullName>Diaco_EmailNotification3__c</fullName>
    <description>Store the email notification 3</description>
    <label>Email Notification 3</label>
    <type>Email</type>
</CustomField>