force-app/main/default/objects/Coupon__c/fields/Diaco_PercentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Diaco_PercentTrigger__c</fullName>
    <description>Percent responsible to do trigger of the notification alert</description>
    <label>Percent Trigger</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>