force-app/main/default/objects/Coupon__c/fields/Diaco_PercentTriggerCurrent__c.field-meta.xml
<CustomField>
    <fullName>Diaco_PercentTriggerCurrent__c</fullName>
    <description>Store the current percent responsible for sent the email</description>
    <label>Percent Trigger Current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>