force-app/main/default/objects/Coupon__c/fields/Diaco_TotalCouponAvailable__c.field-meta.xml
<CustomField>
    <fullName>Diaco_TotalCouponAvailable__c</fullName>
    <description>Store the total coupon availables to use</description>
    <label>Total Coupon Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>