force-app/main/default/objects/Coupon__c/fields/Seen__c.field-meta.xml
<CustomField>
    <fullName>Seen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seen</label>
    <type>Checkbox</type>
</CustomField>