force-app/main/default/objects/Coupon__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Restaurant.com</fullName>
                <default>true</default>
                <label>Restaurant.com</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>