force-app/main/default/objects/Coupon__c/recordTypes/Diaco_EmailNotification.recordType-meta.xml
<RecordType>
    <fullName>Diaco_EmailNotification</fullName>
    <active>true</active>
    <description>The email Notification Coupon</description>
    <label>Email Notification</label>
</RecordType>