force-app/main/default/objects/Coupon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Coupon_Link__c</columns>
    <columns>Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Seen__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>